# find-addends

./: .gitignore  Cargo.toml  README.md  random.ps1  random_new.ps1  random_sets.ps1
benches/: my_benchmark.rs
data/: 2.txt  five_addends_1_big_2020_sum.txt  five_addends_2020_sum.txt  four_perfects_2020_sum.txt  two_addends_2020_sum.txt
src/: lib.rs  main.rs
