[package]
name = "revised"
version = "0.1.0"
authors = ["Anthony A Russo <aarusso.exe@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"
rand = "0.8.3"

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
itertools = "0.10.0"
